# rest-api-gateway

./: .gitignore  CMakeLists.txt  README.md  extract_epic.js  gh_helper.js  install.sh  uninstall.sh
Coding Standards/: Coding Standards.md
docs/: API_VALIDATION.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  PROTOCOL.md
include/gateway/: Common.h
include/gateway/auth/: AesGcm.h  TokenEngine.h
include/gateway/core/: Configuration.h  Coroutine.h  EventLoop.h
include/gateway/forwarding/: BackendForwarder.h  RequestFormatter.h
packaging/: build_package.sh  gateway.json.template  install.sh  nginx-gateway.conf  rest-api-gateway.logrotate  rest-api-gateway.service  uninstall.sh
src/: main.cpp
src/auth/: AesGcm.cpp  TokenEngine.cpp
src/core/: Configuration.cpp  Coroutine.cpp  EventLoop.cpp
src/forwarding/: BackendForwarder.cpp  RequestFormatter.cpp
src/logging/: Logger.cpp
src/routing/: EndpointDefinition.cpp  ParameterSchema.cpp  RoutingTable.cpp
src/transport/: FrameProtocol.cpp  HttpParser.cpp  HttpResponse.cpp  TcpListener.cpp  UnixSocketListener.cpp
src/validation/: JsonParser.cpp  ValidationEngine.cpp
tests/integration/: backend_simulator.py  http_client.py  load_test.py  multi_backend_test.py  network_scan_test.py  run_all_tests.sh  test_config.json
tests/unit/: run_unit_tests.py  test_configuration.py  test_frame_protocol.py  test_helpers.py  test_http_parser.py  test_json_parser.py  test_network_scanner.py  test_parameter_schema.py  test_request_formatter.py  test_routing_table.py  test_token_engine.py  test_validation_engine.py
(+11 files in other folders)
